# QuadB-Training

./: package-lock.json  package.json
Day2/cross_canister/: README.md  dfx.json
Day2/cross_canister/src/cross_canister_frontend/src/: App.jsx
Day2/cross_canister/src/store/: store.did
Day2/cross_canister/src/store/src/: lib.rs
Day2/cross_canister/src/wallet/: Cargo.toml  wallet.did
Day2/my_rust/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
Day2/my_rust/src/my_rust_backend/: Cargo.toml  my_rust_backend.did
Day2/my_rust/src/my_rust_backend/src/: .lib.rs.swp  lib.rs
Day2/my_rust/src/my_rust_frontend/: package.json
Day2/my_rust/src/my_rust_frontend/src/: App.jsx
Day3/cross_canister/: Cargo.toml  package-lock.json  package.json
Day3/cross_canister/src/cross_canister_backend/: Cargo.toml
Day3/cross_canister/src/cross_canister_frontend/: package.json
Day3/cross_canister/src/store/: Cargo.toml
Day3/cross_canister/src/wallet/src/: lib.rs
