[package]
name = "my_rust_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.11"
ic-cdk-macros = "0.6"
ic-cdk-timers = "0.4"
candid = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }



