[package]
name = "cross_canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
[dependencies]
ic-cdk = "0.17.0"                # Use ic-cdk version 0.17
ic-cdk-macros = "0.17.0"          # Match ic-cdk-macros version to ic-cdk version
candid = "0.10.4"                 # Use candid version 0.10.4 (matching ic-cdk)
candid_derive = "0.6.6"           # Use candid_derive version 0.6.6 to match candid v0.10.4
serde = "1.0"                     # Use the stable version of serde
serde_json = "1.0"                # Use the stable version of serde_json

